--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My First Ever Github Repo</title>
 </head>
 <body>
-    
+    <h1>hello world</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus iusto natus praesentium nihil assumenda eius illo explicabo maiores amet necessitatibus ut illum eos tenetur placeat saepe tempore dolorum, aliquid, mollitia totam officia harum quidem. Quibusdam perferendis odio tempora veniam similique debitis! Quisquam voluptatem sapiente asperiores, enim quos delectus quas unde?</p>
 </body>
 </html>
